# steinmetz

./: .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  pyproject.toml
docs/: PLACE.md  fusion-bridge.md  tighten-placement.md
examples/: read_design.py  run_command.py
scripts/: capture_selection.py  evaluate_place.py
src/: board.py  bridge.py  place.py  scr.py  screenshot.py  selection.py
